--- a/Berners Street .html
+++ b/Berners Street .html
@@ -81,11 +81,13 @@ width: 200px;
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">Dialog.addClickHandler("#some-element", null, function () {
     Dialog.setup("My Dialog Title", "my-dialog-class");
     Dialog.wiki(Story.get("MyDialogContents").processText());
 });
 Config.history.controls = false;
+
 
 
 
@@ -164,7 +166,7 @@ As you climb up the two rows of stairs up to the office, you notice agitated tal
 [[Pharmacy]]</tw-passagedata><tw-passagedata pid="7" name="Interlude" tags="" position="3582,1750" size="100,100">&lt;&lt;set $phase_collection to false &gt;&gt;
 
 [[Monday]]
-</tw-passagedata><tw-passagedata pid="8" name="Monday" tags="" position="3485,1928.3333333333333" size="100,100">&lt;&lt;set $phase_tumult to true&gt;&gt;
+</tw-passagedata><tw-passagedata pid="8" name="Monday" tags="" position="3485,1928" size="100,100">&lt;&lt;set $phase_tumult to true&gt;&gt;
 &lt;&lt;set $tumult to 0&gt;&gt;
 [[8.00]]
 </tw-passagedata><tw-passagedata pid="9" name="8.00" tags="" position="3503,2138" size="100,100">&lt;&lt;linkappend &quot;Wait for a while&quot;&gt;&gt;
@@ -324,7 +326,7 @@ Ahh a customer well clothed! I don’t get much customers these days since the r
 [[What do you mean with entertaining?]]
 [[I would like to have medicine for my Masters bronchite-&gt;Just Medicine]]
 
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="24" name="Photography Shop" tags="" position="2967,1116" size="100,100">
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="24" name="Photography Shop" tags="" position="3173.6666666666665,996" size="100,100">
 You push the giant shiny hand made glass door of the brand new building and step in. The store is one big room. Two well-dressed gentlemen sit together on a small table having a cup of tea and a chat, while another man in the back of the room is handling something with a big camera. In the other corner, a young lady in a brand new white dress practises some poses in front of a big picture of an empty london street in deep winter. There are also a lot of frames and shelves filled up with cameras, lenses and other stuff.
 The whole room is very clean and tidy. Everything shines and sparkles.
 One of the two chatting gentlemen interrupts the talking and turns his head around. He is a very big man, definitely overweight, wearing a dark brand new suit with a black top hat and a big moustache in his chubby face.
@@ -337,7 +339,7 @@ He lights his pipe and continues the talk with the other gentleman, also a very 
 
 [[Return to the Street-&gt;Blocksford Street]] 
 [[You stand still and listen to the gentlemen]]
-[[You decide to take a walk through the store and check it out a little bit.]]</tw-passagedata><tw-passagedata pid="25" name="Caclographer Workshop" tags="" position="2465,1524" size="100,100">
+[[You decide to take a walk through the store and check it out a little bit.]]</tw-passagedata><tw-passagedata pid="25" name="Caclographer Workshop" tags="" position="2456.6666666666665,1384" size="100,100">
 
 &lt;&lt;if $visitedChalcographer is true&gt;&gt;
 	Hello again dear Sir. My Offer still stands. 20 Pounds just name the 		details and the place.
@@ -496,7 +498,7 @@ He turns around and walks away angry, shouting to the coachman:
 
 “Load! Immediately! God damn it!”
 
-&lt;&lt;set $tumult += 8&gt;&gt;</tw-passagedata><tw-passagedata pid="30" name="Happening Chalcographer" tags="" position="3366.3333333333335,2130" size="100,100">&lt;&lt;if $photographer_present is true&gt;&gt;
+&lt;&lt;set $tumult += 8&gt;&gt;</tw-passagedata><tw-passagedata pid="30" name="Happening Chalcographer" tags="" position="3366,2130" size="100,100">&lt;&lt;if $photographer_present is true&gt;&gt;
 
 A small skinny man in old brown clothes comes around the corner, looks at the facades of the houses, trying to catch the numbers. As soon as he spotted the photographer, he walks straight to him:
 
@@ -672,7 +674,7 @@ And so, without ever knowing, you prevented the Berners Street Hoax from happeni
 &#39;&#39;The End&#39;&#39;
 [[Back to Start -&gt;Start]] 
 
-</tw-passagedata><tw-passagedata pid="36" name="Continue" tags="" position="3512.3333333333335,937.0000000000001" size="100,100">
+</tw-passagedata><tw-passagedata pid="36" name="Continue" tags="" position="3512,937" size="100,100">
 And so, on the next day, you head over to Hook’s office again, ready to do as he pleased. 
 You will go out into the streets of London, and try to get as many people to visit the Berner Street 54 as you can. The more trouble you stir up, the better, that’s the whole plan. 
 You try to keep in mind that getting people that don’t like each other to the Berner Street at the same time, will increase the turmoil even more.
@@ -716,7 +718,7 @@ You immediately turn around. Something’s not right. Not at all.
 &lt;&lt;else&gt;&gt;
 
 &lt;&lt;/if&gt;&gt;
-</tw-passagedata><tw-passagedata pid="39" name="You stand still and listen to the gentlemen" tags="" position="2599,799" size="100,100">You give a nod, turn around a little bit and take a step beside. There are some magazines laying on another table. You take one of them, scroll through the pages a little bit and try to understand what the gentlemen are talking about.
+</tw-passagedata><tw-passagedata pid="39" name="You stand still and listen to the gentlemen" tags="" position="2614,740.6666666666666" size="100,100">You give a nod, turn around a little bit and take a step beside. There are some magazines laying on another table. You take one of them, scroll through the pages a little bit and try to understand what the gentlemen are talking about.
 
 … you have never seen anything like this, i’m telling you, Lance! You will be the first in the city to own it, i promise you!
 
@@ -752,13 +754,13 @@ He stands up, pushes back the chair adjusts his collar and comes straight toward
 
 
 [[I need a photographer]]
-</tw-passagedata><tw-passagedata pid="40" name="You decide to take a walk through the store and check it out a little bit." tags="" position="2935,797" size="100,100">You step towards a frame with old cameras. Some of them have a few traces of usage, but everything is very clean and seems to be lovingly cared.
+</tw-passagedata><tw-passagedata pid="40" name="You decide to take a walk through the store and check it out a little bit." tags="" position="2991.6666666666665,720.3333333333334" size="100,100">You step towards a frame with old cameras. Some of them have a few traces of usage, but everything is very clean and seems to be lovingly cared.
 You take a closer look to a very old camera that looks like a wooden box with a hole in it. On top there is something standing out of it, like a little drawer. You wonder what it is and you put it out a little tiny bit. The big man with the mustache and the top hat interrupts his talking and turns his head to you:
 
 Sir! Please don’t touch! This thing is very fragile and worth a lot!
 
 
-[[What’s the use of this?-&gt;Expensive Price]]</tw-passagedata><tw-passagedata pid="41" name="I need a photographer" tags="" position="2394,974" size="100,100">
+[[What’s the use of this?-&gt;Expensive Price]]</tw-passagedata><tw-passagedata pid="41" name="I need a photographer" tags="" position="2405.6666666666665,875.6666666666666" size="100,100">
 //Aye, right place, right time! Although my timetable is quite full, i do have some time left for new commissions! What exactly are we talking about?//
 
 
@@ -771,14 +773,14 @@ Sir! Please don’t touch! This thing is very fragile and worth a lot!
 Oh well in that Case I&#39;ll do it for merly 10£.
 
 [[Deal!-&gt;Deal Photographer]]
-</tw-passagedata><tw-passagedata pid="43" name="Deal Photographer" tags="" position="2690,1214" size="100,100">&lt;&lt;if $photographer_pricecheap is true&gt;&gt;
+</tw-passagedata><tw-passagedata pid="43" name="Deal Photographer" tags="" position="2798.3333333333335,1170.6666666666667" size="100,100">&lt;&lt;if $photographer_pricecheap is true&gt;&gt;
 &lt;&lt;set $money -= 15&gt;&gt;
 Good! I’ll be there on time! Good day, Sir!
 &lt;&lt;else&gt;&gt;
 &lt;&lt;set $money -= 10&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;set $photographer to true&gt;&gt;
-[[Blocksford Street]] </tw-passagedata><tw-passagedata pid="44" name="Expensive Price" tags="" position="2684,1006" size="100,100">&lt;&lt;set $photographer_pricecheap to false&gt;&gt;
+[[Blocksford Street]] </tw-passagedata><tw-passagedata pid="44" name="Expensive Price" tags="" position="2774,934.3333333333334" size="100,100">&lt;&lt;set $photographer_pricecheap to false&gt;&gt;
 
 Oh, the camera is a very complicated and complex manufacturing. I don’t want to be rude, but most people wouldn’t understand it anyway.
 
@@ -796,13 +798,13 @@ I heard you, Sir, but i had to finish my work. You know, as an artist i need the
 [[Excuse me, i didn’t want to disturb your workflow, Sir.-&gt;Excuse]]
 
 &lt;&lt;set $visitedChalcographer to true&gt;&gt;
-</tw-passagedata><tw-passagedata pid="46" name="Freaking Cat! God damn you dirty beast!" tags="" position="2203,1730" size="100,100">A small skinny man in old brown clothes rushes into the room from a back room behind the counter. He looks up to you, eyes you up and down, opens the microscope-kinda-lid of his horn glasses and raises a warning finger.
+</tw-passagedata><tw-passagedata pid="46" name="Freaking Cat! God damn you dirty beast!" tags="" position="2256.3333333333335,1686.6666666666667" size="100,100">A small skinny man in old brown clothes rushes into the room from a back room behind the counter. He looks up to you, eyes you up and down, opens the microscope-kinda-lid of his horn glasses and raises a warning finger.
 
 I heard that, boy! Don’t you ever call my cat a dirty beast again, huh?!
 
 [[I am very sorry, Sir. I didn’t want to be rude. That cat just frightened me, you have to understand. I love pets!-&gt;pets]]
 
-</tw-passagedata><tw-passagedata pid="47" name="Deal Chaclograpger" tags="" position="2098,1352" size="100,100">Sounds good! Saturday 10:00 o’clock? The address is 54 Berners Street.
+</tw-passagedata><tw-passagedata pid="47" name="Deal Chaclograpger" tags="" position="2068,1300.3333333333333" size="100,100">Sounds good! Saturday 10:00 o’clock? The address is 54 Berners Street.
 
 &lt;&lt;set $money -= 10&gt;&gt;
 &lt;&lt;set $chalcographer to true&gt;&gt;
@@ -1255,7 +1257,7 @@ He walks away and disappears in the next alley.
 
 [[Hard to say. My employer, Mrs. Tottenham wants to replace all the rugs in her house. The current ones are very old and used. We need different colors and sizes. I think the best way to find out would be if you could visit us.-&gt;Replace Rugs]]
 
-[[Oh I just wanted to look around-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="86" name="Replace Rugs" tags="" position="2639.3333333333335,1826.333333333333" size="100,100">Sounds like a big job! Well, as i said, i am very busy at the moment. I could visit the Lady at monday, but we have to agree a down payment of 16£.
+[[Oh I just wanted to look around-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="86" name="Replace Rugs" tags="" position="2657.3333333333335,1791" size="100,100">Sounds like a big job! Well, as i said, i am very busy at the moment. I could visit the Lady at monday, but we have to agree a down payment of 16£.
 
 &lt;&lt;if $money lt 16&gt;&gt;
 [[I don&#39;t have enough money... Goodbye Sir-&gt;Blocksford Street]] 
@@ -1265,7 +1267,7 @@ He walks away and disappears in the next alley.
 [[Hmmm, that seems a little too much for something we do not buy yet. The Lady wouldn’t accept that. You have to reduce the price a little bit.-&gt;Cheaper Price]]
 
 [[Way too much for just an down payment. I’m sorry!-&gt;Even Cheaper]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="87" name="DealRugdealer" tags="" position="2399.3333333333335,1731.6666666666667" size="100,100">Good! See you there, Sir!
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="87" name="DealRugdealer" tags="" position="2430.6666666666665,1789.3333333333333" size="100,100">Good! See you there, Sir!
 &lt;&lt;if $rugdealer_pricecheap is 1&gt;&gt;
   &lt;&lt;set $money -=12&gt;&gt;
   &lt;&lt;set $rugdealer to true&gt;&gt;
@@ -1293,7 +1295,7 @@ He walks away and disappears in the next alley.
 [[Still too much. I’m sorry! Have a nice day, Sir!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="90" name="Excuse" tags="" position="1809,1309" size="100,100">Don’t you worry, Sir. As long as you respect my Artwork, i am always open for a talk, especially if you want me to do my artwork for you. Is that the reason of your visit? By the way, my name is Cooper Needlestich, i am the owner.
 
 [[ Sure.I was assigned by my employer Mrs. Tottenham to hire somebody to make a portrait of her dog, an old and prideful labrador. She fears that he will leave us soon and she wants to have a memory of him lying on her late husband&#39;s former armchair.-&gt;Dog Portrait]]
-</tw-passagedata><tw-passagedata pid="91" name="pets" tags="" position="2214,1568" size="100,100">hmmmpf… so do you?
+</tw-passagedata><tw-passagedata pid="91" name="pets" tags="" position="2044,1579.6666666666667" size="100,100">hmmmpf… so do you?
 
 [[Well.. you know. they are alright..!-&gt;Excuse]]
 
@@ -1301,7 +1303,7 @@ He walks away and disappears in the next alley.
 	&lt;&lt;set $angered_calcographer to true&gt;&gt;
 	Alright boy, get out of my house!
 	[[Leave the Shop-&gt;Blocksford Street]] 
-&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="92" name="Dog Portrait" tags="" position="1779.3333333333333,1566.6666666666667" size="100,100">Oh, dogs are my speciality. What size are we talking about?
+&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="92" name="Dog Portrait" tags="" position="1779,1566" size="100,100">Oh, dogs are my speciality. What size are we talking about?
 
 Well, it should be a big portrait. I mean a giant one. I mean, it’s a memorial!
 
@@ -1383,8 +1385,8 @@ In the big stir you created you leap out of eyes reach of the flock and move you
 &lt;&lt;set $priest to false&gt;&gt;
 &lt;&lt;set $prostitute to true&gt;&gt;
 &lt;&lt;set $rugdealer to true&gt;&gt;
-&lt;&lt;set $pharmacist to false&gt;&gt;
-&lt;&lt;set $criminal to true&gt;&gt;
+&lt;&lt;set $pharmacist to true&gt;&gt;
+&lt;&lt;set $criminal to false&gt;&gt;
 &lt;&lt;set $detective to false&gt;&gt;</tw-passagedata><tw-passagedata pid="99" name="Rateing" tags="" position="3513,2981" size="100,100">&lt;&lt;if $tumult gte 105&gt;&gt;
 	&lt;&lt;goto &quot;Overdone Ending&quot;&gt;&gt;	
 &lt;&lt;elseif $tumult gte 100&gt;&gt;
