--- a/Berners Street .html
+++ b/Berners Street .html
@@ -286,7 +286,7 @@ Welcome, welcome… the name is George Attling, call me george. how can I help y
 
 
 </tw-passagedata><tw-passagedata pid="18" name="100 Ending" tags="" position="3341,3240" size="100,100">You have won! 100 Tumult
-[[Return to Start-&gt;Start]] </tw-passagedata><tw-passagedata pid="19" name="Overdone Ending" tags="" position="3483,3202" size="100,100">You have won but overdone
+[[Return to Start-&gt;Start]] </tw-passagedata><tw-passagedata pid="19" name="Overdone Ending" tags="" position="3483,3200.3333333333335" size="100,100">You have won but overdone
 [[Return to Start-&gt;Start]] </tw-passagedata><tw-passagedata pid="20" name="Underperformance Ending" tags="" position="3641,3171" size="100,100">You have Failed
 
 [[Return to Start-&gt;Start]] </tw-passagedata><tw-passagedata pid="21" name="Shadey Alley" tags="" position="4486,2207" size="100,100">You enter a dark alley and instantly try not to vomit from the disgusting smell of garbage and filth that accumulated over many years there. You accidently step into something soft and take a look at your shoes when out of nowhere a shadow appears in front of you. A rather short man stands in front of you, with icy eyes staring directly at you. He wears remarkably flawless black clothes for someone that just appeared in a dark alley in the most notorious street of london. He smiles and asks:
@@ -316,7 +316,7 @@ Oh you agian. What do you take? The Medicine or the Alternative
 &lt;&lt;else&gt;&gt;
 You enter a small room and you wait a moment until your eyes adapt to the darkness in this store. Only a little ray of sunlight passes behind the curtains, which are hanged in front of the windows. There is a counter and behind it several  shelves filled with glasses of all kinds of shapes, size and color. A short old man past his sixties with thick eyeglasses sits behind the counter reading a book. His face expression is just like one of a sloth. Calm, sad and probably extremely high on morphium. As you clear your throat he looks up directly into your eyes. A moment passes. He still doesn’t say anything. 
 
-Good day Sir, I want to order some medicine!
+//Good day Sir, I want to order some medicine!//
 
 The old man looks surprised and says with a remarkably deep voice. 
 
@@ -1102,7 +1102,7 @@ I can steal anytime, anywhere for .... let&#39;s say 20£. This is a one-time of
 
 &lt;&lt;set $money -=20&gt;&gt;
 &lt;&lt;set $criminal to true&gt;&gt;
-[[Leave the street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="70" name="No Deal Criminal" tags="" position="4516,2698" size="100,100">Alright you got yourself a deal... tough a small one.
+[[Leave the street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="70" name="No Deal Criminal" tags="" position="4516,2698" size="100,100">Alright you got yourself a deal... though a small one.
 &lt;&lt;set $money -=5&gt;&gt;
 [[Leave the street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="71" name="RUN!" tags="" position="4684,2385" size="100,100">As you try to escape you suddenly hear a loud bang followed by unbearable pain in your chest. You fall down and see O’Flannigans malicious smile before everything turns dark. 
 
