Added Criminal Happening with Herlock Sholmes

--- a/Berners Street .html
+++ b/Berners Street .html
@@ -84,11 +84,13 @@ width: 200px;
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">Dialog.addClickHandler("#some-element", null, function () {
     Dialog.setup("My Dialog Title", "my-dialog-class");
     Dialog.wiki(Story.get("MyDialogContents").processText());
 });
 Config.history.controls = false;
+
 
 
 
@@ -1032,7 +1034,7 @@ You remember that your task is to order the services to Bernerstreet 54.
 &lt;&lt;/if&gt;&gt;
 [[You know what? I’d like to order those two and in addition some of your special mixture.What kind of mixtures do you have?-&gt;Alternative Medicine]]
 
-[[I will come back to your store later this day. I have some urgent business to do. My apologies.-&gt;Goodbye]]</tw-passagedata><tw-passagedata pid="62" name="Alternative Medicine" tags="" position="5151,1725.3333333333333" size="100,100">//Ahhh you chose wisely! I have this special mixture that works well with bronchite! It’s called the Chinese Dragonleaf water. We imported the best oriental herbs for this product. For 7£.//
+[[I will come back to your store later this day. I have some urgent business to do. My apologies.-&gt;Goodbye]]</tw-passagedata><tw-passagedata pid="62" name="Alternative Medicine" tags="" position="5151,1725" size="100,100">//Ahhh you chose wisely! I have this special mixture that works well with bronchite! It’s called the Chinese Dragonleaf water. We imported the best oriental herbs for this product. For 7£.//
 
 He hands you a small jar with a dark greenish liquid inside. You look at the label. 
 It says:
@@ -1228,7 +1230,19 @@ Suddenly the servant takes out a rifle and shots in the air twice. The Rugdealer
  &quot;Go to hell y&#39;stuck up bastards! You were just robbed by the notorious, the feared, the shameless Shamous O’Flannigan!! &quot; 
 He starts running away.
 The servant and the maid watch him leave out of the window.
-&lt;&lt;set $tumult += 9&gt;&gt;</tw-passagedata><tw-passagedata pid="77" name="Happening Detective" tags="" position="3633,2830" size="100,100">
+&lt;&lt;set $tumult += 9&gt;&gt;
+
+
+HAPPENING WITH ENEMY
+
+Suddenly O&#39;Flannigan falls on the ground. He swears a few more sentences as he gets up. But in the middle of his motion he stops and looks around like a lost child. 
+Herlock Sholmes appears behind a bush and slowly walks towards Shamous, while he still struggles to get up. 
+//You fell in to my trap! I actually didn&#39;t believe it would work out. How does it feel to be glued to the ground?// 
+//YOU! WHO ARE YOU??? I&#39;ve never seen you in this town!//
+//You could say that I am quite the opposite of you - a detective genius who is unpredicteable for others. It took quite the calculations to come up with a plan for catching someone like you.//
+Herlock reaches his hand behind his back and takes out handcuffs. O&#39;Flannigan sees the opportunity, takes out a round object from his jacket and throws it on the ground. A lound bang followed by a thick cloud of smoke that spreads on the street leads to people panicking on the street. For a few seconds you can&#39;t hear nothing. Then Suddenly you hear gunshots and groaning from the middle of the cloud. The smoke thins out and both Herlock and Shamous lie on the sidewalk. 
+// CALL A DOCTOR!! // 
+Herlock groans in pain and holds his chest, which is covered in blood while Shamous still lies motionless on the ground.</tw-passagedata><tw-passagedata pid="77" name="Happening Detective" tags="" position="3633,2830" size="100,100">
 Same as the normal Happening but the Detective catches O’Flannigan and maybe they shoot around with their guns??
 
 &lt;&lt;set $tumult += 19&gt;&gt;</tw-passagedata><tw-passagedata pid="78" name="Detective" tags="" position="4363,1532" size="100,100">As you pass by the many rundown buildings in Reekstreet, you suddenly feel something on your shoulder. You turn around and look into the face of a man in his thirties, with a dark beard and horn-rimmed spectacles. He looks at you with a worn out look.
