--- a/Berners Street .html
+++ b/Berners Street .html
@@ -127,8 +127,9 @@ Config.history.controls = false;
 
 
 
-</script><tw-passagedata pid="1" name="Start" tags="" position="5888,370" size="100,100">Bernerstreet ist die Geschichte eines Dieners im 18 Jhrd. der in die Wirren des grössten Steiches des Jahrhunderts gerät.
-[[Goto-&gt;Intro]]
+</script><tw-passagedata pid="1" name="Start" tags="" position="5888,370" size="100,100">The Berners Street Hoax is the biggest prank of the 19th century. Can you pull it off?
+
+[[Let&#39;s Go-&gt;Intro]]
 
 
 </tw-passagedata><tw-passagedata pid="2" name="Intro" tags="" position="3465,0" size="100,100">
@@ -194,7 +195,7 @@ As you climb up the two rows of stairs up to the office, you notice agitated tal
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="7" name="Interlude" tags="" position="3582,1750" size="100,100">&lt;&lt;set $phase_collection to false &gt;&gt;
 
 [[Monday]]
-</tw-passagedata><tw-passagedata pid="8" name="Monday" tags="" position="3485,1928" size="100,100">&lt;&lt;set $phase_tumult to true&gt;&gt;
+</tw-passagedata><tw-passagedata pid="8" name="Monday" tags="" position="3485,1929.6666666666667" size="100,100">&lt;&lt;set $phase_tumult to true&gt;&gt;
 &lt;&lt;set $tumult to 0&gt;&gt;
 [[8.00]]
 </tw-passagedata><tw-passagedata pid="9" name="8.00" tags="" position="3498,2138" size="100,100">&lt;&lt;linkappend &quot;Wait for a while&quot;&gt;&gt;
@@ -1579,4 +1580,4 @@ The Irish Guy jumps down his cab and jumps onto Carl Uber. His horses shoo and r
 &lt;/span&gt;
 
 
-</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="115" name="Tumult 10" tags="" position="3986.6666666666665,2746.666666666667" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="116" name="Tumult 30" tags="" position="3981.6666666666665,2880.0000000000005" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="117" name="Tumult 40" tags="" position="3991.6666666666665,3020.0000000000005" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="118" name="Tumult 60" tags="" position="3981.666666666667,3140.0000000000005" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="119" name="Tumult 100" tags="" position="3981.6666666666665,3260.0000000000005" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
