--- a/Berners Street .html
+++ b/Berners Street .html
@@ -35,7 +35,7 @@ background-size: auto 10vh;
 background-position:left center;
 text-align:center;
 font-size:1.8em;
-font-style:bold;
+font-weight:2;
 color:#ffffff;
 min-width:70%;
 min-height:100%;
@@ -169,7 +169,7 @@ Config.history.controls = false;
 
 
 
-</script><tw-passagedata pid="1" name="Start" tags="" position="5889.666666666667,368.3333333333333" size="100,100">The Berners Street Hoax is the biggest prank of the 19th century. Can you pull it off?
+</script><tw-passagedata pid="1" name="Start" tags="" position="5749.666666666667,355" size="100,100">The Berners Street Hoax is the biggest prank of the 19th century. Can you pull it off?
 
 [[Let&#39;s Go-&gt;Intro]]
 
@@ -786,7 +786,7 @@ And so, without ever knowing, you prevented the Berners Street Hoax from happeni
 &#39;&#39;The End&#39;&#39;
 [[Back to Start -&gt;Start]] 
 
-</tw-passagedata><tw-passagedata pid="36" name="Continue" tags="" position="3522.0000000000005,927" size="100,100">
+</tw-passagedata><tw-passagedata pid="36" name="Continue" tags="" position="3522.0000000000005,928.6666666666666" size="100,100">
 And so, on the next day, you head over to Hook’s office again, ready to do as he pleased. 
 You will go out into the streets of London, and try to get as many people to visit the Berner Street 54 as you can. The more trouble you stir up, the better, that’s the whole plan. 
 You try to keep in mind that getting people that don’t like each other to the Berner Street at the same time, will increase the turmoil even more.
